# skript-zed

./: .gitignore  Cargo.toml  README.md  extension.toml  skript_lsp.py
docs/: api.json  api.md  api_compact.json
languages/skript/: config.toml
src/: lib.rs
