[package]
name = "skript_zed"
version = "0.1.2"
edition = "2021"
publish = false
authors = ["Raze <raze.crs@proton.me>"]
repository = "https://github.com/razecrs/skript-zed"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
